set version as 1.0.0-SNAPSHOT for maven, other master branch syn changes