@@ -31,8 +31,8 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
  */
 public class TimerPingSender implements MqttPingSender {
 	private static final String CLASS_NAME = TimerPingSender.class.getName();
-	private static final  Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME); 
-	
+	private static final  Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
+
 	private ClientComms comms;
 	private Timer timer;
 
@@ -48,7 +48,7 @@ public class TimerPingSender implements MqttPingSender {
 		String clientid = comms.getClient().getClientId();
 		
 		//@Trace 659=start timer for client:{0}
-		log.fine(CLASS_NAME, methodName, "659", new Object[] { clientid });
+		log.fine(CLASS_NAME, methodName, "659", new Object[]{clientid});
 				
 		timer = new Timer("MQTT Ping: " + clientid);
 		//Check ping after first keep alive interval.
@@ -73,7 +73,7 @@ public class TimerPingSender implements MqttPingSender {
 		
 		public void run() {
 			//@Trace 660=Check schedule at {0}
-			log.fine(CLASS_NAME, methodName, "660", new Object[] { Long.valueOf(System.currentTimeMillis()) });
+			log.fine(CLASS_NAME, methodName, "660", new Object[]{new Long(System.currentTimeMillis())});
 			comms.checkForActivity();			
 		}
 	}
