@@ -35,7 +35,7 @@ import org.eclipse.paho.client.mqttv3.logging.LoggerFactory;
 public class TCPNetworkModule implements NetworkModule {
 	private static final String CLASS_NAME = TCPNetworkModule.class.getName();
 	private static final Logger log = LoggerFactory.getLogger(LoggerFactory.MQTT_CLIENT_MSG_CAT,CLASS_NAME);
-	
+
 	protected Socket socket;
 	private SocketFactory factory;
 	private String host;
@@ -52,6 +52,7 @@ public class TCPNetworkModule implements NetworkModule {
 		this.factory = factory;
 		this.host = host;
 		this.port = port;
+		
 	}
 
 	/**
@@ -63,7 +64,7 @@ public class TCPNetworkModule implements NetworkModule {
 //			InetAddress localAddr = InetAddress.getLocalHost();
 //			socket = factory.createSocket(host, port, localAddr, 0);
 			// @TRACE 252=connect to host {0} port {1} timeout {2}
-			log.fine(CLASS_NAME,methodName, "252", new Object[] {host, Integer.valueOf(port), Long.valueOf(conTimeout*1000)});
+			log.fine(CLASS_NAME,methodName, "252", new Object[] {host, new Integer(port), new Long(conTimeout*1000)});
 			SocketAddress sockaddr = new InetSocketAddress(host, port);
 			socket = factory.createSocket();
 			socket.connect(sockaddr, conTimeout*1000);
